--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "babel-preset-stage-1": "^6.1.18",
+    "css-loader": "^0.25.0",
     "es6-promise": "^4.0.5",
     "eventsource-polyfill": "^0.9.6",
     "lodash": "^3.10.1",
+    "postcss-loader": "^0.13.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
+    "style-loader": "^0.13.1",
     "youtube-api-search": "0.0.5"
   }
 }
